# DIP-HW03

./: .gitignore  CMakeLists.txt  README.md
src/: BaseProcessor.cpp  BaseProcessor.h  ConservativeRotation.cpp  ConservativeRotation.h  GeometricTransformProcessor.cpp  GeometricTransformProcessor.h  NonConservativeRotation.cpp  NonConservativeRotation.h  Scaling.cpp  Scaling.h  common.cpp  common.h  main.cpp
src/affine_transforms/: AffineTransform.cpp  AffineTransform.h
